--- a/pom.xml
+++ b/pom.xml
@@ -98,6 +98,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.6.2</version>
+                <configuration>
+                    <mainClass>ui.MainWindow</mainClass>
+                </configuration>
+            </plugin>
 
         </plugins>
     </build>
